Fixed important icon

--- a/src/style.css
+++ b/src/style.css
@@ -659,7 +659,7 @@ body {
 }
 
 .important-btn-active{
-  background-image: url(./img/important48x48.svg);
+  background-image: url(./img/important.svg);
 }
 
 .task-title {
