--- a/src/style.css
+++ b/src/style.css
@@ -664,6 +664,7 @@ body {
 
 .task-title {
   font-size: 15rem;
+  color: var(--text-light);
 }
 
 .section-header {
@@ -719,6 +720,7 @@ body {
   gap: 4px;
   cursor: pointer;
   width: 100px;
+  color: var(--text-light);
 }
 
 .add-task-container:hover {
@@ -785,7 +787,7 @@ body {
   bottom: 0;
   margin: 0px 130px 40px 0px;
   cursor: pointer;
-  transition: ease-in-out, 200ms;
+  transition: ease-in-out, 300ms;
   z-index: 10;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -908,7 +910,7 @@ button{
 
 .disabled-click{
   pointer-events: none;
-  color: var(--hover-light);
+  color: var(--hover-light)!important;
 }
 
 .invalid-input{
@@ -923,6 +925,10 @@ button{
 
 .task-button-title{
   font-size: 15rem;
+}
+
+#currentTabName{
+  color: var(--text-light);
 }
 
 /*Media Queries*/
