Added displaying no tasks image for important tab

--- a/src/style.css
+++ b/src/style.css
@@ -979,6 +979,26 @@ button{
   padding: 3px 0px;
 }
 
+.no-tasks-img-container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.no-tasks-img{
+  width: 300px;
+}
+
+.no-tasks-img-text{
+  margin-top: 30px;
+  font-size: 20rem;
+  color: var(--text-light);
+  text-align: center;
+}
+
 /*Media Queries*/
 
 /* Smartphones (portrait and landscape) */
@@ -1133,6 +1153,11 @@ button{
 
   .date-task-container{
     display: none;
+  }
+
+  .no-tasks-img-text{
+    font-size: 17rem;
+    padding: 0px 10px;
   }
 }
 
