--- a/src/style.css
+++ b/src/style.css
@@ -611,7 +611,7 @@ body {
 .tasks-list-view {
   box-sizing: border-box;
   padding: 30px 70px 90px 70px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .task {
