--- a/src/style.css
+++ b/src/style.css
@@ -430,6 +430,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  height: 56px;
 }
 
 .border-bottom {
@@ -1017,6 +1018,8 @@ button{
 
 
 
+
+
 /*Media Queries*/
 
 /* Smartphones (portrait and landscape) */
@@ -1123,7 +1126,7 @@ button{
   }
 
   .home-heading {
-    padding-bottom: 7px;
+    padding-bottom: 4px;
   }
 
   .add-section-button {
