--- a/src/style.css
+++ b/src/style.css
@@ -994,11 +994,16 @@ button{
   width: 280px;
 }
 
+.no-tasks-img-today{
+  width: 350px;
+}
+
 .no-tasks-img-text{
   margin-top: 30px;
   font-size: 20rem;
   color: var(--text-light);
   text-align: center;
+  margin-bottom: 50px;
 }
 
 .this-week-date{
@@ -1179,10 +1184,15 @@ button{
   .no-tasks-img-text{
     font-size: 17rem;
     padding: 0px 10px;
+    margin-bottom: 80px;
   }
 
   .no-tasks-img{
     width: 200px;
+  }
+
+  .no-tasks-img-today{
+    width: 270px;
   }
 
   .this-week-date{
