--- a/src/style.css
+++ b/src/style.css
@@ -998,12 +998,16 @@ button{
   width: 350px;
 }
 
+.no-tasks-img-week{
+  width: 420px;
+}
+
 .no-tasks-img-text{
   margin-top: 30px;
   font-size: 20rem;
   color: var(--text-light);
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 60px;
 }
 
 .this-week-date{
@@ -1193,6 +1197,10 @@ button{
 
   .no-tasks-img-today{
     width: 270px;
+  }
+
+  .no-tasks-img-week{
+    width: 300px;
   }
 
   .this-week-date{
