--- a/src/style.css
+++ b/src/style.css
@@ -621,6 +621,13 @@ body {
   margin-bottom: 12px;
 }
 
+.bottom-task-side{
+  display: none;
+  font-size: 12rem;
+  color: var(--hover-light);
+  margin-bottom: 12px;
+}
+
 .left-task-side{
   flex: 6;
   display: flex;
@@ -1032,9 +1039,6 @@ button{
 }
 
 
-
-
-
 /*Media Queries*/
 
 /* Smartphones (portrait and landscape) */
@@ -1215,6 +1219,14 @@ button{
 
   .date-heading-right{
     display: none;
+  }
+
+  .bottom-task-side{
+    display: block;
+  }
+
+  .task{
+    margin-bottom: 0px;
   }
 }
 
