--- a/src/style.css
+++ b/src/style.css
@@ -610,8 +610,12 @@ body {
 .tasks-list-view {
   box-sizing: border-box;
   padding: 30px 70px 90px 70px;
-  overflow-y: auto;
+  height: 90%;
+}
+
+.tasks-list-container {
   height: 100%;
+  overflow-y: auto;
 }
 
 .task {
@@ -626,6 +630,10 @@ body {
   font-size: 12rem;
   color: var(--hover-light);
   margin-bottom: 12px;
+}
+
+.height-auto{
+  height: auto !important;
 }
 
 .left-task-side{
@@ -1020,7 +1028,6 @@ button{
   font-size: 20rem;
   color: var(--text-light);
   text-align: center;
-  margin-bottom: 60px;
 }
 
 .this-week-date{
@@ -1037,6 +1044,7 @@ button{
 .date-displayer{
   padding: 10px 0px 0px 0px;
 }
+
 
 
 /*Media Queries*/
@@ -1138,6 +1146,7 @@ button{
 
   .tasks-list-view {
     padding: 20px 20px 90px 20px;
+    height: 87%;
   }
 
   .delete-question {
@@ -1198,7 +1207,6 @@ button{
   .no-tasks-img-text{
     font-size: 17rem;
     padding: 0px 10px;
-    margin-bottom: 80px;
   }
 
   .no-tasks-img{
