Added no sections image functionality

--- a/src/style.css
+++ b/src/style.css
@@ -1030,11 +1030,18 @@ button{
   min-width: 300px;
 }
 
+.no-sections-img{
+  width: 35%;
+  max-width: 450px;
+  min-width: 300px;
+}
+
 .no-tasks-img-text{
   margin-top: 30px;
   font-size: 20rem;
   color: var(--text-light);
   text-align: center;
+  max-width: 370px;
 }
 
 .this-week-date{
@@ -1219,6 +1226,7 @@ button{
   .no-tasks-img-text{
     font-size: 17rem;
     padding: 0px 10px;
+    max-width: none;
   }
 
   .no-tasks-img{
@@ -1230,6 +1238,10 @@ button{
   }
 
   .no-tasks-img-week{
+    width: 70%;
+  }
+
+  .no-sections-img{
     width: 70%;
   }
 
