Added toast notification displaying project name

--- a/src/style.css
+++ b/src/style.css
@@ -1065,6 +1065,12 @@ button{
   border-radius: 8px !important;
 }
 
+.custom-toast-red{
+  width: 240px;
+  background: var(--tertiary-color-light) !important;
+  border-radius: 8px !important;
+}
+
 
 /*Media Queries*/
 
