--- a/src/style.css
+++ b/src/style.css
@@ -1083,6 +1083,14 @@ button{
   border-radius: 8px !important;
 }
 
+#preloader{
+  background: #fff url(./img/preloader.gif) no-repeat center center;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: 10000;
+}
+
 
 /*Media Queries*/
 
