Fixed preloading html elements

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+#preloader{
+  background: #fff url(../src/img/preloader.gif) no-repeat center center;
+}
+
 @font-face {
   font-family: 'TTBold';
   src: url(./fonts/TT\ Interphases\ Pro\ Trial\ Bold.ttf);
@@ -1083,13 +1087,7 @@ button{
   border-radius: 8px !important;
 }
 
-#preloader{
-  background: #fff url(./img/preloader.gif) no-repeat center center;
-  height: 100vh;
-  width: 100vw;
-  position: fixed;
-  z-index: 10000;
-}
+
 
 
 /*Media Queries*/
